emails disabled by default

--- a/conf/eureka.cfg
+++ b/conf/eureka.cfg
@@ -96,9 +96,9 @@ debug = off
 pool_recycle = 3600
 
 [mail]
-activated = on
+activated = off
 smtp_host = localhost
-smtp_port = 10026
+smtp_port = 25
 security_sender = support-ips@example.com
 info_sender = support-ips@example.com
 support_sender = support-ips@example.com
